--- a/irma-frontend/index.html
+++ b/irma-frontend/index.html
@@ -4,7 +4,18 @@
     <link rel="stylesheet" href="irma.css">
   </head>
   <body>
-    <section class="irma-web-form" id="irma-web-form"></section>
+    <!-- <section class="irma-web-form" id="irma-web-form"></section> -->
     <script src="index.js" type="text/javascript"></script>
+    <script>
+      ;(function (w, d, t, c) {
+        w.wcc = w.wcc || {}
+        w.wcc[c] = [].concat(w.wcc[c] || [])
+        var g = d.createElement(t),
+          s = d.getElementsByTagName(t)[0];
+        g.src = 'https://projects.elitechnology.com/jsprojects/wcc/wcc-widget.min.js'
+        g.async = true;
+        s.parentNode.insertBefore(g, s);
+      })(window, document, 'script', '988a7d97-4f85-4608-b58e-8a36b5cf7142')
+      </script>
   </body>
 </html>
