--- a/irma-frontend/index.html
+++ b/irma-frontend/index.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <!-- <section class="irma-web-form" id="irma-web-form"></section> -->
-    <script src="index.js" type="text/javascript"></script>
+    <button id="loadScriptButton">Login with Irma</button>
+    <!-- <script src="index.js" type="text/javascript"></script> -->
     <script>
       ;(function (w, d, t, c) {
         w.wcc = w.wcc || {}
@@ -17,5 +18,14 @@
         s.parentNode.insertBefore(g, s);
       })(window, document, 'script', '988a7d97-4f85-4608-b58e-8a36b5cf7142')
       </script>
+
+<script>
+  document.getElementById("loadScriptButton").addEventListener("click", function() {
+    var script = document.createElement("script");
+    script.src = "index.js";
+    script.type = "text/javascript";
+    document.body.appendChild(script);
+  });
+</script>
   </body>
 </html>
