--- a/irma-frontend/index.html
+++ b/irma-frontend/index.html
@@ -7,7 +7,7 @@
     <!-- <section class="irma-web-form" id="irma-web-form"></section> -->
     <button id="loadScriptButton">Login with Irma</button>
     <!-- <script src="index.js" type="text/javascript"></script> -->
-    <script>
+    <!-- <script>
       ;(function (w, d, t, c) {
         w.wcc = w.wcc || {}
         w.wcc[c] = [].concat(w.wcc[c] || [])
@@ -17,7 +17,17 @@
         g.async = true;
         s.parentNode.insertBefore(g, s);
       })(window, document, 'script', '988a7d97-4f85-4608-b58e-8a36b5cf7142')
+    </script> -->
+
+<script>
+  // Declaration function
+  function jsapi() {
+        // function calls
+        cmwc.get('988a7d97-4f85-4608-b58e-8a36b5cf7142').open()
+    }
     </script>
+
+<script type="module" crossorigin="anonymous" src='https://webchat.digitalcx.com/webchat.js' onload="cmwc.add('352264d4-ac74-4b1f-8311-7bd82fa8ced6').install();"></script>
 
 <script>
   document.getElementById("loadScriptButton").addEventListener("click", function() {
